# testbench

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: test_the_things_workflow.yml
Tests/: CMakeLists.txt  test_main.cc  test_main.cpp
Tests/TestUtils/: constexpr_stuff.h  string_utils.h  string_utils.tpp
Tests/TestUtils/Tests/: test_constexpr_stuff.cc  test_string_utils.cc
Tests/mock_src/Utils/: constexpr_utils.h
Tests/shadow_src/Utils/: test_constexpr_utils.cc
Tests/shadow_src/xmacro_stuff/: test_xmacro_definitions.cc
Tests/xmacro_stuff/: test_xmacro_definitions.cc
src/: main.cpp
src/Utils/: constexpr_utils.h
src/xmacro_stuff/: xmacro_definitions.h
